# Experimental-VigurVM

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: Category2DataTypes.md
src/: ByteArray.cpp  ByteArray.h  Core.h  CoreUtils.cpp  CoreUtils.h  DynamicArray.cpp  DynamicArray.h  Error.h  Memory.h  OutputBuffer.cpp  OutputBuffer.h  Platform.h  StringUtils.cpp  StringUtils.h  Util.cpp  Util.h  main.cpp
src/ClassLoader/: AttributeParser.cpp  AttributeParser.h  ClassLoader.cpp  ClassLoader.h  DescriptorParser.cpp  DescriptorParser.h
src/Data/: Attribute.cpp  Attribute.h  Class.h  ConstantPool.cpp  ConstantPool.h  Descriptor.h  Opcode.h  VData.cpp  Variable.cpp  Variable.h
src/Linux/: CMakeLists.txt  Memory.cpp  Platform.cpp
src/VM/: ComparisonInstructions.cpp  ComparisonInstructions.h  Configuration.h  ConstantInstructions.cpp  ConstantInstructions.h  ControlInstructions.cpp  ControlInstructions.h  ExtendedInstructions.cpp  ExtendedInstructions.h  Instruction.h  JavaHeap.cpp  JavaHeap.h  JavaStack.h  LoadInstructions.cpp  LoadInstructions.h  MathInstructions.cpp  MathInstructions.h  Native.cpp  Native.h  ReferenceInstructions.cpp  ReferenceInstructions.h  StackInstructions.cpp  StackInstructions.h  StoreInstructions.cpp  StoreInstructions.h  VM.cpp  VM.h  VMThread.cpp  VMThread.h
src/VM/Instructions/: ComparisonInstructions.cpp  ComparisonInstructions.h  ConstantInstructions.cpp  ConstantInstructions.h  ControlInstructions.cpp  ControlInstructions.h  ConversionInstructions.cpp  ConversionInstructions.h  ExtendedInstructions.cpp  ExtendedInstructions.h  LoadInstructions.cpp  LoadInstructions.h  MathInstructions.cpp  MathInstructions.h  ReferenceInstructions.cpp  ReferenceInstructions.h  StackInstructions.cpp  StackInstructions.h  StoreInstructions.cpp  StoreInstructions.h
src/Windows/: CMakeLists.txt  Memory.cpp  Platform.cpp
test/: CMakeLists.txt
test/DynamicArray/: CMakeLists.txt  main.cpp
test/e2e/: ArgsTest.java  CMakeLists.txt  DivMulTest.java  InstanceofTest.java  LibraryTest.java  LookupSwitchTest.java  PrivilegedTest.java  ShrTest.java  SmokeTest.java  StaticTest.java  TestValidationException.java
tools/ClassDump/: CMakeLists.txt  ClassDumpConfig.h.in  README.md
tools/ClassDump/src/: ByteArray.cpp  ClassDump.cpp  Core.h  Opcode.h  OutputBuffer.cpp  OutputBuffer.h  Platform.h  Util.cpp
tools/ClassDump/src/ClassLoader/: AttributeParser.cpp  AttributeParser.h  ClassLoader.cpp  ClassLoader.h  DescriptorParser.cpp  DescriptorParser.h
tools/ClassDump/src/Data/: Attribute.cpp  Attribute.h  Class.h  ConstantPool.cpp  Descriptor.h
tools/ClassDump/src/Linux/: CMakeLists.txt  Memory.cpp  Platform.cpp
tools/ClassDump/src/Printer/: AttributePrinter.cpp  AttributePrinter.h  ClassPrinter.cpp  ClassPrinter.h  CodePrinter.cpp  CodePrinter.h  PrintUtils.cpp  PrintUtils.h
tools/ClassDump/src/Windows/: CMakeLists.txt  Memory.cpp  Platform.cpp
tools/ClassDump/test/: CMakeLists.txt
tools/ClassDump/test/descriptorParser/: CMakeLists.txt  main.cpp
tools/ClassDump/test/e2etest/: CMakeLists.txt  ConstantValue.java  Exceptions.java  Main.java  Unicode.java
